--- a/src/index.css
+++ b/src/index.css
@@ -9,14 +9,19 @@
   --tan: tan;
   --darkTan: rgb(36, 33, 29);
   --font-light: white;
+  --font-color-brand: rgb(255, 255, 255);
+
   --bg-tag: rgb(105, 90, 69);
   --bg-char: rgb(88, 74, 54);
   --bg-dark: rgb(57, 48, 35);
   --bg-medium: rgb(56, 51, 44);
   --bg-light: rgb(103, 93, 78);
+  --bg-overlay: hsla(0, 0%, 0%, 0.5);
+
   --dark-border: hsla(360, 50%, 30%, 1);
-  --medium-border: rgb(183, 45, 45);
-  --font-color-brand: rgb(255, 255, 255);
+  --medium-border: hsl(0, 61%, 45%);
+  --selected-border: hsla(123, 100%, 29%, 0.5);
+  --targeted-border: hsla(0, 100%, 50%, 0.5);
 }
 
 button{
