added some continuity and favorites

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --tan: tan;
   --darkTan: rgb(36, 33, 29);
   --font-light: white;
-  --font-color-brand: #fff8bd;
+  --font-color-brand: hsla(54, 100%, 87%, 0.88);
 
   --bg-dark: #2e0d0d;
   --bg-medium: #421212;
