--- a/src/index.css
+++ b/src/index.css
@@ -26,12 +26,18 @@
   --targeted-border: hsla(0, 100%, 50%, 0.5);
 }
 
+#root {
+  z-index: 0;
+  position: relative;
+}
+
 #overlay-root {
   width: 100%;
   height: 100vh;
   position: absolute;
   overflow: hidden;
   pointer-events: none;
+  z-index: 3;
 }
 
 #menu-root {
